istio/account/account-egress.yaml
# this configuration is use egress rule from account service connect to external service
# for example in this part is account service will be connect to 
# - sav-txn
# - saving-mongo
# - saving-redis

# every serviceEntry is describe with ports property ,it's mean that port will be open in service account
# so service account connect to external service at port 32104, 3004  for connection saving-txn.default-svc.cluster.local (represent host name)
# and the supported protocol is HTTP, HTTP2, TCP, MONGO 
# http2 is represent the grpc connection

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: sav-account-egress-txn
spec:
  hosts:
    - saving-txn.default.svc.cluster.local
  ports:
    - number: 32104
      name: saving-txn-grpc
      protocol: HTTP2
    - number: 30004
      name: saving-txn-http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: sav-account-egress-mongo
spec:
  hosts:
    - saving-mongo.default.svc.cluster.local
  ports:
    - number: 31001
      name: saving-mongo
      protocol: MONGO
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: sav-account-egress-redis
spec:
  hosts:
    - saving-redis.default.svc.cluster.local
  ports:
    - number: 31005
      name: saving-redis
      protocol: TCP
